--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -15,7 +15,7 @@
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
         </div> -->
         <div class="incard notification">
-          <div class="header-cards">Coming Soon</div>
+          <div class="cd-head">Coming Soon</div>
         </div>
     </ion-content>
 </ion-view>
