--- a/www/templates/profile-edit.html
+++ b/www/templates/profile-edit.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Edit Profile">
   <ion-nav-buttons side="right">
     <div class="dh-relative">
-      <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
+      <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl"></button>
       <span class="badge badge-assertive btn-set span-abs">0</span>
     </div>
 
