--- a/www/templates/faq.html
+++ b/www/templates/faq.html
@@ -1,4 +1,4 @@
-<ion-view view-title="FAQ's">
+<ion-view view-title="FAQ's & Help">
   <ion-nav-buttons side="right">
     <div class="dh-relative">
       <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
