--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -62,12 +62,12 @@
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.faq" >
                       <i class="icon ln-question side-menu-i"></i>
-                   FAQ
+                   FAQ & Help
                 </ion-item>
-                <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.contactus" >
+                <!-- <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.contactus" >
                       <i class="icon ln-contacts side-menu-i"></i>
                    Contact Us
-                </ion-item>
+                </ion-item> -->
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="login" ng-click="logoutfunction();">
                       <i class="icon ln-arrow-right side-menu-i"></i>
                     Logout
