--- a/www/templates/faq.html
+++ b/www/templates/faq.html
@@ -20,19 +20,47 @@
                             <div class="input-label">
                                 Question
                             </div>
-                            <select>
-                                <option>What is Barter ??? </option>
-                                <option selected>What is Barter Trade ???</option>
-                                <option>What are advantages of barter trade ???</option>
-                                <option>How is Trade value Define???</option>
-                                <option>Why do organization join a barter Trade Network???</option>
-                                <option>How Does SWAAP Work???</option>
-                                <option>What does it process to join SWAAP ??? </option>
-                                <option>Are there any tax advantages to barter??? </option>
+                            <select ng-model="question" ng-change="getDropDownValue(question);">
+                                <option ng-selected="true" value="1">What is Barter ??? </option>
+                                <option value="2">What is Barter Trade ???</option>
+                                <option value="3">What are advantages of barter trade ???</option>
+                                <option value="4">How is Trade value Define???</option>
+                                <option value="5">Why do organization join a barter Trade Network???</option>
+                                <option value="6">How Does SWAAP Work???</option>
+                                <option value="7">What does it process to join SWAAP ??? </option>
+                                <option value="8">Are there any tax advantages to barter??? </option>
                             </select>
                         </label>
-                        <div class="ans">
+                        <div class="ans" ng-if="question==1">
                             <p>An exchange of goods and services without cash. i.e You buy what you need and sell what you have without exchange of money</p>
+                        </div>
+                        <div class="ans" ng-if="question==2">
+                            <p>The act to transfer goods and services between two or more parties without the use of money.</p>
+                        </div>
+                        <div class="ans" ng-if="question==3">
+                          <p>
+                              Barter trade benefits individuals, companies and countries that see mutual benefits in exchanging goods and services rather than spending cash, and it enables those who are lacking liquidity to buy goods and services.
+                              <br/>Barter trade network provides business with new clients and result in increasing revenue, expanding their market beyond their cash-paying.
+                              <br/>A Barter trade puts idle resources to work such as excess time, inventory, and capacity which are converted into profits.
+                          </p>
+                        </div>
+                        <div class="ans" ng-if="question==4">
+                            <p>A printed cost of product or sevices is define as trade value.</p>
+                        </div>
+                        <div class="ans" ng-if="question==5">
+                            <p>  In a barter trade network , every member trades with everyone, even if they do not want to take back directly what the other person has to offer.
+                              <br/>Trade due are credited/ debited to a trade account of the respective parties, which can then be spent on any item or service desired from within the network from time to time. </p>
+                        </div>
+                        <div class="ans" ng-if="question==6">
+                            <p>SWAAP performs two basic functions for their members. SWAAP act first as, keeping accounts of members' transactions and trade balances, and secondly actively stimulate trading by brokering Products &#38; services, either finding buyers/sellers for members product and services or buying it for their own account for later sale. SWAAP is a trade exchange which works on prepaid system.
+                            <br>Every 1000 Cash Rupee paid to SWAAP towards transaction charges will give a excess of 10,000 Trade value for Sales and Purchases respectively.
+                            <br>For Eg. A Retail shop owners who sell clothes once become a member has to pay 1000 Rupee Cash to SWAAP to get 10,000 trade value for his Purchase/sale So a Shop owner can now go to any SWAAP member and can purchase good UPTO 10,000 trade value of his needs and will have to sell his goods up to 10000 trade value as per other member needs . Any member looking for more trade can pay in advance for his transaction charges and increase his trade value as per his needs.</p>
+                        </div>
+                        <div class="ans" ng-if="question==7">
+                            <p>Client has to pay Rs.15000/- as a lifetime membership fee to join SWAAP And then 5% transaction fee on each trade of purchase and sale.</p>
+                        </div>
+                        <div class="ans" ng-if="question==8">
+                            <p>There are no tax advantages or disadvantages to barter. The Internal Revenue Service considers barter income as the same as cash income for tax purposes. Trading should be considered a marketing tool, not a tax tool.</p>
                         </div>
                     </div>
                 </div>
@@ -41,12 +69,12 @@
 
                         <label class="item item-input item-stacked-label">
                             <span class="input-label">Email</span>
-                            <input type="email" placeholder="Enter Email ID" ng-model="contact.user">
+                            <input type="email" placeholder="Enter Email ID" ng-model="contact.user" ng-class="allvalidation[0].validation">
                         </label>
                         <div class="">
                             <label class="item item-input item-stacked-label">
                                 <span class="input-label">Description</span>
-                                <textarea name="" id="" cols="30" rows="10" ng-model="contact.message" class="width100" placeholder="Enter description"></textarea>
+                                <textarea name="" id="" cols="30" rows="10" ng-model="contact.message" class="width100" placeholder="Enter description" ng-class="allvalidation[1].validation"></textarea>
                             </label>
                         </div>
 
