git kar dia maine

--- a/www/templates/product.html
+++ b/www/templates/product.html
@@ -3,7 +3,7 @@
   <ion-nav-buttons side="right">
     <div class="dh-relative">
       <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
-      <span class="badge badge-assertive btn-set span-abs">0</span>
+      <span class="badge badge-assertive btn-set span-abs"></span>
     </div>
 
   </ion-nav-buttons>
