--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -8,7 +8,7 @@
         <div class="buttons button-right">
           <div class="dh-relative">
             <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
-            <span class="badge badge-assertive btn-set span-abs">0</span>
+            <span class="badge badge-assertive btn-set span-abs"></span>
           </div>
             <button class="button button-icon ion-ios-loop-strong small-icon" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
         </div>
