--- a/www/templates/orders.html
+++ b/www/templates/orders.html
@@ -2,9 +2,9 @@
   <ion-nav-buttons side="right">
     <div class="dh-relative">
       <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
-      <span class="badge badge-assertive btn-set span-abs">0</span>
+      <span class="badge badge-assertive btn-set span-abs"></span>
     </div>
-    
+
   </ion-nav-buttons>
    <div class="tabs-striped tabs-background-balanced tabs-color-light">
       <div class="tabs">
