--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -2,7 +2,7 @@
    <ion-nav-buttons side="right">
      <div class="dh-relative">
        <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
-       <span class="badge badge-assertive btn-set span-abs">0</span>
+       <span class="badge badge-assertive btn-set span-abs"></span>
      </div>
       <a class="button button-icon ion-edit small-icon" ng-click="editpro(profile);" href="#/app/profile/edit"></a>
    </ion-nav-buttons>
