--- a/www/templates/faq.html
+++ b/www/templates/faq.html
@@ -16,11 +16,11 @@
                 <div class="list" ng-if="tabs=='faq'">
                     <div class="list">
 
-                        <label class="item item-input item-select">
+                        <label class="item item-input item-select pad-more">
                             <div class="input-label">
-                                Question
+                                Select a Question
                             </div>
-                            <select ng-model="question" ng-change="getDropDownValue(question);">
+                            <select ng-model="question" ng-change="getDropDownValue(question);" style="opacity: 0;">
                                 <option ng-selected="true" value="1">What is Barter ??? </option>
                                 <option value="2">What is Barter Trade ???</option>
                                 <option value="3">What are advantages of barter trade ???</option>
@@ -32,35 +32,42 @@
                             </select>
                         </label>
                         <div class="ans" ng-if="question==1">
-                            <p>An exchange of goods and services without cash. i.e You buy what you need and sell what you have without exchange of money</p>
+                          <p>Q. What is Barter ???</p>
+                            <p>A. An exchange of goods and services without cash. i.e You buy what you need and sell what you have without exchange of money</p>
                         </div>
                         <div class="ans" ng-if="question==2">
-                            <p>The act to transfer goods and services between two or more parties without the use of money.</p>
+                          <p>Q. What is Barter Trade ???</p>
+                            <p>A. The act to transfer goods and services between two or more parties without the use of money.</p>
                         </div>
                         <div class="ans" ng-if="question==3">
-                          <p>
-                              Barter trade benefits individuals, companies and countries that see mutual benefits in exchanging goods and services rather than spending cash, and it enables those who are lacking liquidity to buy goods and services.
+                          <p>Q. What are advantages of barter trade ???</p>
+                          <p>A. Barter trade benefits individuals, companies and countries that see mutual benefits in exchanging goods and services rather than spending cash, and it enables those who are lacking liquidity to buy goods and services.
                               <br/>Barter trade network provides business with new clients and result in increasing revenue, expanding their market beyond their cash-paying.
                               <br/>A Barter trade puts idle resources to work such as excess time, inventory, and capacity which are converted into profits.
                           </p>
                         </div>
                         <div class="ans" ng-if="question==4">
-                            <p>A printed cost of product or sevices is define as trade value.</p>
+                          <p>Q. How is Trade value Define???</p>
+                            <p>A. A printed cost of product or sevices is define as trade value.</p>
                         </div>
                         <div class="ans" ng-if="question==5">
-                            <p>  In a barter trade network , every member trades with everyone, even if they do not want to take back directly what the other person has to offer.
+                          <p>Q. Why do organization join a barter Trade Network???</p>
+                            <p>A. In a barter trade network , every member trades with everyone, even if they do not want to take back directly what the other person has to offer.
                               <br/>Trade due are credited/ debited to a trade account of the respective parties, which can then be spent on any item or service desired from within the network from time to time. </p>
                         </div>
                         <div class="ans" ng-if="question==6">
-                            <p>SWAAP performs two basic functions for their members. SWAAP act first as, keeping accounts of members' transactions and trade balances, and secondly actively stimulate trading by brokering Products &#38; services, either finding buyers/sellers for members product and services or buying it for their own account for later sale. SWAAP is a trade exchange which works on prepaid system.
+                          <p>Q. How Does SWAAP Work???</p>
+                            <p>A. SWAAP performs two basic functions for their members. SWAAP act first as, keeping accounts of members' transactions and trade balances, and secondly actively stimulate trading by brokering Products &#38; services, either finding buyers/sellers for members product and services or buying it for their own account for later sale. SWAAP is a trade exchange which works on prepaid system.
                             <br>Every 1000 Cash Rupee paid to SWAAP towards transaction charges will give a excess of 10,000 Trade value for Sales and Purchases respectively.
                             <br>For Eg. A Retail shop owners who sell clothes once become a member has to pay 1000 Rupee Cash to SWAAP to get 10,000 trade value for his Purchase/sale So a Shop owner can now go to any SWAAP member and can purchase good UPTO 10,000 trade value of his needs and will have to sell his goods up to 10000 trade value as per other member needs . Any member looking for more trade can pay in advance for his transaction charges and increase his trade value as per his needs.</p>
                         </div>
                         <div class="ans" ng-if="question==7">
-                            <p>Client has to pay Rs.15000/- as a lifetime membership fee to join SWAAP And then 5% transaction fee on each trade of purchase and sale.</p>
+                          <p>Q. What does it process to join SWAAP ???</p>
+                            <p>A. Client has to pay Rs.15000/- as a lifetime membership fee to join SWAAP And then 5% transaction fee on each trade of purchase and sale.</p>
                         </div>
                         <div class="ans" ng-if="question==8">
-                            <p>There are no tax advantages or disadvantages to barter. The Internal Revenue Service considers barter income as the same as cash income for tax purposes. Trading should be considered a marketing tool, not a tax tool.</p>
+                          <p>Q. Are there any tax advantages to barter???</p>
+                            <p>A. There are no tax advantages or disadvantages to barter. The Internal Revenue Service considers barter income as the same as cash income for tax purposes. Trading should be considered a marketing tool, not a tax tool.</p>
                         </div>
                     </div>
                 </div>
