--- a/www/templates/faq.html
+++ b/www/templates/faq.html
@@ -1,5 +1,11 @@
 <ion-view view-title="FAQ's & Help">
+  <ion-nav-buttons side="right">
+    <div class="dh-relative">
+      <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
+      <span class="badge badge-assertive btn-set span-abs"></span>
+    </div>
 
+  </ion-nav-buttons>
     <div class="tabs-striped tabs-background-balanced tabs-color-light">
         <div class="tabs">
             <a class="tab-item {{classp}}" ng-click="tabchanges('faq',1)">
