--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1152,3 +1152,6 @@ a.tab-item.active-tab {
 .pad-more{
   padding: 5px 0px !important;
 }
+
+/*hotels page*/
+.brdr-select .hotel-city input { padding: 0px 15px; }
