--- a/www/templates/home-hotel.html
+++ b/www/templates/home-hotel.html
@@ -222,6 +222,7 @@
                     </div>
                     <select ng-model="hotel.children" ng-class="allvalidation[7].validation">
                         <option value="">Select</option>
+                        <option value="0">0</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
