--- a/www/templates/home-hotel.html
+++ b/www/templates/home-hotel.html
@@ -44,11 +44,11 @@
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Check in date</span>
-                    <input type="date" ng-model="hotel.checkin" ng-class="allvalidation[3].validation">
+                    <input type="date" ng-model="hotel.checkin" ng-class="allvalidation[3].validation" min="{{currentDate}}">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Check out date</span>
-                    <input type="date" ng-model="hotel.checkout" ng-class="allvalidation[4].validation">
+                    <input type="date" ng-model="hotel.checkout" ng-class="allvalidation[4].validation" min="{{currentDate}}">
                 </label>
                 <label class="item item-input item-select">
                     <div class="input-label">
@@ -218,7 +218,7 @@
                 </label>
                 <label class="item item-input item-select">
                     <div class="input-label">
-                        Number of Childrens
+                        Number of Children
                     </div>
                     <select ng-model="hotel.children" ng-class="allvalidation[7].validation">
                         <option value="">Select</option>
