--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1155,3 +1155,27 @@ a.tab-item.active-tab {
     background-color: #ffffff;
 
 }
+.registration.pull-left {
+    display: inline-block;
+    margin-top: 6px;
+    color: #fff;
+    text-decoration: underline;
+}
+.registration.pull-right{
+    display: inline-block;
+}
+.popup {
+  height:200px;
+}
+.popup-head.mi  {
+    padding: 14px 10px 0px 0px;
+    border-bottom: 0px solid #eee;
+    text-align: center;  }
+    .bor input{
+      border: 1px solid #ccc;
+      height: 45px;
+      padding: 0px 0px 0px 10px;
+    }
+.margin-top10{
+  margin-top: 10px;
+}
