--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -15,10 +15,13 @@
             <div class="btn-login">
                 <a class="button button-block button-balanced" ng-click="onlogin(user1)" type="submit">Login</a>
             </div>
-            
-            <div class="registration pull-right" ng-click="openreg();">
+            <div class="registration pull-left" ng-click="openreg();">
                    Become a Member?
             </div>
+            <div class="registration pull-right" ng-click="showSuccessmy();">
+                   Forgot Password?
+            </div>
+<div class="clearfix"></div>
             <!--<div class="forgot"><a href="#">Forgot Password?</a></div>-->
         </div>
     </ion-content>
