--- a/www/templates/forget-password.html
+++ b/www/templates/forget-password.html
@@ -1,18 +1,18 @@
-<ion-view ng-controller="LoginCtrl">
+<ion-view>
     <ion-content >
-        <div class="pop text-center" >
+        <div class="pop text-center">
             <div class="popup-head mi">
-              <p>Enter Your Member ID</p>
+                <p>Enter Your Member ID</p>
             </div>
             <div class="popup-body bor">
 
-                <input type="email" placeholder="Member ID">
+                <input type="number" ng-model="forgot.email" placeholder="Member ID">
 
-         </div>
-<div class="margin-top10">
-  <button class="button button-balanced ">Send</button>
-                  <button class="button button-balanced " ng-click="closPop()">Cancel</button>
-</div>
+            </div>
+            <div class="margin-top10">
+                <button class="button button-balanced" ng-click="forgotPassword(forgot.email)">Send</button>
+                <button class="button button-balanced " ng-click="closPop()">Cancel</button>
+            </div>
         </div>
     </ion-content>
 </ion-view>
