--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -17,7 +17,7 @@
             <ion-item class="item-left">
                <h2>Category</h2>
                <div class="pull-right item-right text-capitalize">
-                  {{profile.category}}
+                <p>  {{profile.category}}</p>
                </div>
             </ion-item>
             <div class="item item-text-wrap header">
