--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -14,11 +14,12 @@
             <h3>{{profile.shopname}}</h3>
          </div>
          <div class="list profile-cont padtop5">
-            <ion-item class="item-left">
-               <h2>Category</h2>
-               <div class="pull-right item-right text-capitalize">
-                <p>  {{profile.category}}</p>
-               </div>
+            <ion-item class="">
+               <h2 class="font-bold">Category</h2>
+
+                <!-- <p>  </p> -->
+                <p class="down-paragraph">{{profile.category}}</p>
+
             </ion-item>
             <div class="item item-text-wrap header">
                <h2> Address</h2>
