--- a/www/templates/profile-edit.html
+++ b/www/templates/profile-edit.html
@@ -13,7 +13,7 @@
                <div class="list">
                   <div class="profile-img">
                      <img src="{{profile.shoplogo|serverimage}}">
-                     
+
                      <div class="padding-horizontal text-center">
                         <button class="button button-balanced pr-button" ng-click="changeprofileimage()">Edit</button>
                         <button class="button button-balanced pr-button" ng-click="removeProfileImage()">Delete</button>
@@ -23,8 +23,10 @@
                      <input type="text" placeholder="Name" ng-model="profile.shopname" required>
                   </div>
                   <!--Select-->
-                  <div class="item item-input item-select text-capitalize">
+                  <div class="item item-input item-select text-capitalize" ng-if="cat.length > 0">
                      <div class="input-label different">Category</div>
+                     {{profile.categoryid}}
+                     {{cat}}
                      <select ng-model="profile.categoryid" required multiple>
                         <!-- <option value="">All</option> -->
                         <option ng-repeat="c in cat" value="{{c.id}}">{{c.name}}</option>
@@ -105,7 +107,7 @@
                      <div class="row">
                         <div class="col input-div" ng-repeat="i in image">
                            <div class="image-hold" ng-style="{'background-image':'url({{i.photo|serverimage}})'}"  ng-click="changeproductimage(i.id);"></div>
-                           <p style="background-color: #f78330;color: white;padding: 5px 0 4px;" ng-click="deleteProductsPhoto($index)">Delete</p>
+                           <p  class="text-center" style="background-color: #f78330;color: white;padding: 5px 0 4px;" ng-click="deleteProductsPhoto($index)">Delete</p>
                         </div>
                         <div class="col input-div" ng-if="image.length==0" ng-click="changeproductimage('');">
                            <div class="img-profile">
