--- a/www/templates/notification.html
+++ b/www/templates/notification.html
@@ -7,7 +7,7 @@
 
   </ion-nav-buttons>
     <ion-content class="padding">
-       <p class="royal padding text-center" ng-if="notification.length==0">No Notifications yet.</p>
+       <p class="royal padding text-center" ng-if="notification.length==0">{{msg}}</p>
         <div class="incard notification" ng-repeat="n in notification">
           <div class="close-btn" ng-click="readNotification($index, n.id)">
             <i class="ln-cross"></i>
