--- a/www/templates/profile-edit.html
+++ b/www/templates/profile-edit.html
@@ -23,7 +23,7 @@
                      <input type="text" placeholder="Name" ng-model="profile.shopname" required>
                   </div>
                   <!--Select-->
-                  <div class="item item-input item-select text-capitalize" ng-if="cat.length > 0">
+                  <div class="item item-input item-select text-capitalize" ng-if="cat.length">
                      <div class="input-label different">Category</div>
                      {{profile.categoryid}}
                      {{cat}}
