--- a/www/templates/notification.html
+++ b/www/templates/notification.html
@@ -12,7 +12,7 @@
           <div class="close-btn" ng-click="readNotification($index, n.id)">
             <i class="ln-cross"></i>
           </div>
-            <div class="header-cards">Business
+            <div class="header-cards">
                 <span style="float:right; font-size:14px;">{{n.date | date:'dd MMM yyyy'}} {{n.time | ampmtime}}</span>
             </div>
             <p>{{n.message}}</p>
